--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           apt-get update && apt-get install -y rsync
       - name: Web Build
         run: |
-          cd project
+          cd Game
           mkdir ./$EXPORT_NAME
           rsync -Rr . ./$EXPORT_NAME
           cd $EXPORT_NAME
@@ -53,4 +53,4 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@0.3.0
         with:
-          args: 'A game update is available at https://NAME-OF-YOUR-USER.itch.io/NAME-OF-YOUR-GAME !'
+          args: 'A game update is available at https://Pir0_C0mder.itch.io/Duotron !'
